# pty-mcp

./: AGENTS.md  README.md  pyproject.toml
src/pty_mcp/: __init__.py  config.py  server.py  session.py  tools.py
tests/: conftest.py  test_ansi_filtering.py  test_logging.py  test_session.py  test_tools.py
