[project]
name = "pty-mcp"
version = "0.1.0"
description = "MCP server exposing PTY sessions for AI agents"
readme = "README.md"
authors = [
    { name = "brkhrdt", email = "a@b.c" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp",
]

[project.scripts]
pty-mcp = "pty_mcp.server:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
